--- a/BadgeCenterDemo/BadgeCenterDemo/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/BadgeCenterDemo/BadgeCenterDemo/en.lproj/MainStoryboard_iPhone.storyboard
@@ -18,11 +18,35 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="460"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <view contentMode="scaleToFill" id="cki-f7-99J">
+                                <rect key="frame" x="0.0" y="69" width="320" height="391"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </view>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="5Fk-I6-hNb">
+                                <rect key="frame" x="20" y="20" width="280" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Subtitle" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="qtV-OU-Wt7">
+                                <rect key="frame" x="20" y="40" width="280" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </scrollView>
+                    <connections>
+                        <outlet property="badgesView" destination="cki-f7-99J" id="iaE-FZ-bpz"/>
+                        <outlet property="header" destination="5Fk-I6-hNb" id="9fv-T0-ecY"/>
+                        <outlet property="subtitle" destination="qtV-OU-Wt7" id="KfU-sx-cH0"/>
+                    </connections>
                 </viewController>
             </objects>
+            <point key="canvasLocation" x="-124" y="-53"/>
         </scene>
     </scenes>
     <resources>
@@ -31,6 +55,11 @@
     <classes>
         <class className="BCViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BCViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="badgesView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="header" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="subtitle" candidateClass="UILabel"/>
+            </relationships>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
