fix project references

--- a/BadgeKit/BCBadgeView.xib
+++ b/BadgeKit/BCBadgeView.xib
@@ -53,14 +53,13 @@
 						<string key="NSFrame">{{20, 403}, {280, 37}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<int key="IBUIButtonType">1</int>
-						<string key="IBUINormalTitle">Close</string>
+						<string key="IBUINormalTitle">CLOSE</string>
 						<object class="NSColor" key="IBUIHighlightedTitleColor" id="69962166">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
